--- a/index.html
+++ b/index.html
@@ -4,21 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AP2-Übungen</title>
+    <link href="assets/ap2.css" rel="stylesheet">
 </head>
 <body>
     <div class="header">
-        <h1>AP2-Übungen</h1>
+        <h1>AP2-Übungen: Fachinformatiker Anwendungsentwicklung</h1>
     </div>
 
     <div class="inhalt">
 
+        <div class="abschnitt">
+            <h3>Design-Pattern</h3>
+            <hr>
+            <p><a href="./design-pattern/mvc-pattern/">MVC - Model-View-Controller</a></p>
+            <p>Singleton</p>
+            <p>Observer</p>
+            <p>Factory</p>
+        </div>
+
+        <div class="abschnitt">
+            <h3>SQL</h3>
+            <hr>
+            <p>CREATE & ORDER/GROUP BY</p>
+            <p>SELECT</p>
+            <p>INSERT</p>
+            <p>UPDATE</p>
+            <p>JOIN</p>
+            <p>LIMIT</p>
+        </div>
+
+        <div class="abschnitt">
+            <h3><a href="https://entwickler.de/datenbanken/1-grundlagen-des-datenbankentwurfs-er-modell-normalisierung" target="_blank">Datenbanken</a></h3>
+            <hr>
+            <p><a href="./datenbanken/grundlagen.html">Grundlagen</a></p>
+            <p><a href="./datenbanken/relationales_datenmodell.html">Relationales Datenmodell</a></p>
+            <p><a href="./datenbanken/er-modell.html">ER-Modell</a></p>
+            <p><a href="./datenbanken/normalformen.html">1.-3. Normalform</a></p>
+        </div>        
+
+        <div class="abschnitt">
+            <h3>UML</h3>
+            <hr>
+            <p>Zustandsdiagramm</p>
+            <p>Aktivitätsdiagramm</p>
+            <p>Use-Case-Diagramm</p>
+            <p>Sequenzdiagramm</p>
+            <p>Klassendiagramm</p>
+        </div>
+
+        <div class="abschnitt">
+            <h3><a href="https://dev.to/koladev/8-must-know-sorting-algorithms-5ja" target="_blank">Algorhytmen</a></h3>
+            <hr>
+            <p>Bubble-Sort</p>
+            <p>Selection Sort</p>
+            <p>Insertion Sort</p>
+            <p>Quicksort</p>                        
+            <p>Merge Sort</p>
+            <p>Bucket Sort</p>
+            <p>Shell Sort</p>
+            <p>Heap Sort</p>
+        </div>
+
+        <div class="abschnitt">
+            <h3>Programmierung</h3>
+            <hr>
+            <p>Grundlagen</p>
+            <p>Rekursion</p>
+            <p>Objektorientierung</p>
+            <p>Interface</p>
+            <p>abstrakte Klassen</p>
+            <p>Pseudo-Code</p>
+        </div>
+
+        <div class="abschnitt">
+            <h3><a href="https://fachinformatikerpruefungsvorbereitung.de/abschlusspr%C3%BCfungteil2wirtschaft/" target="_blank">WISO</a></h3>
+            <hr>
+            <p><a href="./wiso/epk.html">EPK - Ereignisgesteuerte Prozesskette</a></p>
+            <p><a href="./wiso/mutterschutz.html">Mutterschutz</a></p>
+            <p><a href="./wiso/betriebsvereinbarungen.html">Betriebsvereinbarung</a></p>
+            <p><a href="./wiso/kuendigungen.html">Kündigungen</a></p>
+            <p><a href="./wiso/betriebsrat.html">Betriebsrat</a></p>
+            <p><a href="./wiso/europass.html">Europass</a></p>
+            <p><a href="./wiso/rechtsformen.html">Rechtsformen</a></p>
+            <p><a href="./wiso/wirtschaftssektoren.html">Wirtschaftssektoren</a></p>
+        </div>
+
+        <div class="abschnitt">
+            <h3>Sonstiges</h3>
+            <hr>
+            <p>...</p>
+        </div>
+
     </div>
-    
-    <style>
-        body{
-            text-align: center;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-    </style>
+
 </body>
 </html>
