--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AP2-Übungen</title>
     <link href="assets/ap2.css" rel="stylesheet">
+    <link rel="icon" href="./assets/icon.png">
 </head>
 <body>
     <div class="header">
@@ -16,44 +17,48 @@
         <div class="abschnitt">
             <h3>Design-Pattern</h3>
             <hr>
-            <p><a href="./design-pattern/mvc-pattern/">MVC - Model-View-Controller</a></p>
+            <p><a href="./design-pattern/mvc-pattern/">Model-View-Controller</a></p>
             <p>Singleton</p>
             <p>Observer</p>
             <p>Factory</p>
         </div>
 
         <div class="abschnitt">
-            <h3>SQL</h3>
+            <h3>SQL <small>(MySQL/MariaDB)</small></h3>
             <hr>
-            <p>CREATE & ORDER/GROUP BY</p>
-            <p>SELECT</p>
-            <p>INSERT</p>
-            <p>UPDATE</p>
-            <p>JOIN</p>
-            <p>LIMIT</p>
+            <p><a href="./sql/create.html">CREATE</a></p>
+            <p><a href="./sql/select-order-group-limit.html">SELECT + ORDER/GROUP BY + LIMIT</a></p>
+            <p><a href="./sql/insert-update.html">INSERT / UPDATE</a></p>
+            <p><a href="./sql/alter.html">ALTER</a></p>
+            <p><a href="./sql/join.html">JOIN</a></p>
+            <p><a href="./sql/truncate.html">TRUNCATE</a></p>
+            <p><a href="./sql/drop.html">DROP</a></p>
+            <p><a href="./sql/transaktionen.html">Transaktionen</a></p>
         </div>
 
         <div class="abschnitt">
             <h3><a href="https://entwickler.de/datenbanken/1-grundlagen-des-datenbankentwurfs-er-modell-normalisierung" target="_blank">Datenbanken</a></h3>
             <hr>
             <p><a href="./datenbanken/grundlagen.html">Grundlagen</a></p>
-            <p><a href="./datenbanken/relationales_datenmodell.html">Relationales Datenmodell</a></p>
-            <p><a href="./datenbanken/er-modell.html">ER-Modell</a></p>
+            <p><a href="./datenbanken/modelle.html">Relationales und ER-Modell</a></p>
+            <p><a href="./datenbanken/ri.html">Referenzielle Integrität</a></p>
             <p><a href="./datenbanken/normalformen.html">1.-3. Normalform</a></p>
         </div>        
 
         <div class="abschnitt">
             <h3>UML</h3>
             <hr>
-            <p>Zustandsdiagramm</p>
-            <p>Aktivitätsdiagramm</p>
-            <p>Use-Case-Diagramm</p>
-            <p>Sequenzdiagramm</p>
-            <p>Klassendiagramm</p>
+            <p><a href="./uml/zustandsdiagramm.html">Zustandsdiagramm</a></p>
+            <p><a href="./uml/aktivitaetsdiagramm.html">Aktivitätsdiagramm</a></p>
+            <p><a href="./uml/use-case.html">Use-Case-Diagramm</a></p>
+            <p><a href="./uml/sequenzdiagramm.html">Sequenzdiagramm</a></p>
+            <p><a href="./uml/klassendiagramm.html">Klassendiagramm</a></p>
+            <p><a href="./uml/struktogramm.html">Struktogramm</a></p>
+            <p><a href="./uml/pap.html">Programmablaufplan (Flussdiagramm)</a></p>
         </div>
 
         <div class="abschnitt">
-            <h3><a href="https://dev.to/koladev/8-must-know-sorting-algorithms-5ja" target="_blank">Algorhytmen</a></h3>
+            <h3><a href="https://dev.to/koladev/8-must-know-sorting-algorithms-5ja" target="_blank">Algorithmen</a></h3>
             <hr>
             <p>Bubble-Sort</p>
             <p>Selection Sort</p>
@@ -73,6 +78,7 @@
             <p>Objektorientierung</p>
             <p>Interface</p>
             <p>abstrakte Klassen</p>
+            <p>generische Klassen</p>
             <p>Pseudo-Code</p>
         </div>
 
@@ -89,11 +95,13 @@
             <p><a href="./wiso/wirtschaftssektoren.html">Wirtschaftssektoren</a></p>
         </div>
 
+        <!--
         <div class="abschnitt">
             <h3>Sonstiges</h3>
             <hr>
             <p>...</p>
         </div>
+        -->
 
     </div>
 
