--- a/sql/truncate.html
+++ b/sql/truncate.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WISO | Betriebsvereinbarungen</title>
+    <title>TRUNCATE | SQL</title>
     <link href="../assets/ap2.css" rel="stylesheet">
     <link rel="icon" href="../assets/icon.png">
 </head>
 <body>
+    
+    <h1>Die TRUNCATE-Anweisungen</h1>
     <div class="text">
-        <h1>Betriebsvereinbarungen</h1>
-        <ul>
-            <li>Gilt nur innerhalb eines Betriebes</li>
-            <li>Einschränkung auf Mitarbeitergruppen möglich</li>            
-        </ul>
+    <p>Leert eine Tabelle vollständig, und setzt auch den Auto-Inkrement-Wert zurück.</p>
+<pre>
+    TRUNCATE adressen;
+</pre>
     </div>
+    
 </body>
 </html>
