--- a/wiso/rechtsformen.html
+++ b/wiso/rechtsformen.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WISO | Rechstformen</title>
     <link href="../assets/ap2.css" rel="stylesheet">
+    <link rel="icon" href="../assets/icon.png">
 </head>
 <body>
     <h1>Rechtsformen</h1>
