--- a/wiso/mutterschutz.html
+++ b/wiso/mutterschutz.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WISO | Mutterschutz</title>
     <link href="../assets/ap2.css" rel="stylesheet">
+    <link rel="icon" href="../assets/icon.png">
 </head>
 <body>
     <div class="text">
