--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AP2-Übungen</title>
+    <title>Üben für die AP2</title>
     <link href="assets/ap2.css" rel="stylesheet">
     <link rel="icon" href="./assets/icon.png">
 </head>
 <body>
     <div class="header">
-        <h1>AP2-Übungen: Fachinformatiker Anwendungsentwicklung</h1>
+        <h1>Üben für die AP2: Fachinformatiker Anwendungsentwicklung</h1>
+        <p class="mitte">Wenn Überschriften Links sind, führen sie zu der Seite, von der ich die Infos habe.</p>
     </div>
 
     <div class="inhalt">
@@ -50,17 +51,20 @@
             <hr>
             <p><a href="./uml/zustandsdiagramm.html">Zustandsdiagramm</a></p>
             <p><a href="./uml/aktivitaetsdiagramm.html">Aktivitätsdiagramm</a></p>
+            <p><a href="./uml/pap.html">Programmablaufplan (Flussdiagramm)</a></p>
             <p><a href="./uml/use-case.html">Use-Case-Diagramm</a></p>
             <p><a href="./uml/sequenzdiagramm.html">Sequenzdiagramm</a></p>
             <p><a href="./uml/klassendiagramm.html">Klassendiagramm</a></p>
             <p><a href="./uml/struktogramm.html">Struktogramm</a></p>
-            <p><a href="./uml/pap.html">Programmablaufplan (Flussdiagramm)</a></p>
+            <p><a href="./uml/pseudo-code.html">Pseudo-Code</a></p>
         </div>
 
         <div class="abschnitt">
             <h3><a href="https://dev.to/koladev/8-must-know-sorting-algorithms-5ja" target="_blank">Algorithmen</a></h3>
             <hr>
-            <p>Bubble-Sort</p>
+            <p><a href="./algorithmen/bubble-sort.html">Bubble-Sort</a></p>
+            <p><a href="./algorithmen/minimalwert.html">Minimalwert finden</a></p>
+            <p><a href="./algorithmen/maximalwert.html">Maximalwert finden</a></p>
             <p>Selection Sort</p>
             <p>Insertion Sort</p>
             <p>Quicksort</p>                        
@@ -78,8 +82,28 @@
             <p>Objektorientierung</p>
             <p>Interface</p>
             <p>abstrakte Klassen</p>
-            <p>generische Klassen</p>
-            <p>Pseudo-Code</p>
+            <p>generische Klassen</p>            
+        </div>
+
+        <div class="abschnitt">
+            <h3>Netzwerke</h3>
+            <hr>
+            <p><a href="./netzwerke/grundlagen.html">Grundlagen</a></p>
+            <p>IPv4</p>
+            <p>IPv6</p>
+            <p>Subnetting</p>
+            <p>Protokolle</p>
+        </div>
+
+        <div class="abschnitt">
+            <h3>Softwareentwicklung</h3>
+            <hr>
+            <p>CRUD</p>
+            <p>Agile</p>
+            <p>Nutzwertanalyse</p>
+            <p>Lastenheft</p>
+            <p>Pflichtenheft</p>
+            <p>Projekte</p>
         </div>
 
         <div class="abschnitt">
