--- a/sql/join.html
+++ b/sql/join.html
@@ -20,7 +20,7 @@
                     <th><a href="join.png"><img src="join.png" height="80px"></a></th>
                 </tr>
                 <tr>
-                    <td>INNER JOIN</td>
+                    <td>INNER JOIN<br><small>(equi-join)</small></td>
                     <td>Alle Datensätze, die sich in Tabelle 1 UND Tabelle 2 befinden</td>
                     <td><a href="inner_join.png"><img src="inner_join.png" height="80px"></a></td>
                 </tr>
