--- a/uml/aktivitaetsdiagramm.html
+++ b/uml/aktivitaetsdiagramm.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <h2>Aktivitätsdiagramm</h2>
-    <p class="text"></p>
+    <h1><a href="https://www.lucidchart.com/pages/de/uml-aktivitatsdiagramme" target="_blank">Aktivitätsdiagramm</a></h1>
+    <p class="text">Aktivitätsdiagramme helfen Organisationsmitgliedern auf Geschäfts- und Entwicklungsseite, eine gemeinsame Basis zu finden, um dieselben Prozesse und Verhaltensweisen zu verstehen. Für die Erstellung eines Aktivitätsdiagramms stehen Ihnen spezielle Symbole zur Verfügung, z. B. für den Start, das Ende, die Zusammenführung und die Aufnahme von Ablaufschritten, auf die wir in diesem Leitfaden zu Aktivitätsdiagrammen genauer eingehen.</p>
     <table>
         <tr>
             <th>Bild</th>
@@ -18,29 +18,55 @@
             <th>Erklärung</th>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
+            <td class="mitte"><img src="aktivitaetsdiagramm_anfang.png" height=""></td>
+            <td class="mitte">Anfang</td>
+            <td>Hier beginnt die Aktivität</td>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
+            <td class="mitte"><img src="aktivitaetsdiagramm_ende.png" height=""></td>
+            <td class="mitte">Ende</td>
+            <td>Hier endet die Aktivität</td>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
+            <td class="mitte"><img src="aktivitaetsdiagramm_aktivitaet.png" height=""></td>
+            <td class="mitte">Aktivität / Aktion</td>
+            <td>Was passiert hier?</td>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
-        </tr>        
+            <td class="mitte"><img src="aktivitaetsdiagramm_konnektor.png" height=""></td>
+            <td class="mitte">Konnektor</td>
+            <td>Verbindet Aktivitäten / Aktionen</td>
+        </tr>
+        <tr>
+            <td class="mitte"><img src="aktivitaetsdiagramm_entscheidung.png" height=""></td>
+            <td class="mitte">Entscheidung</td>
+            <td>Wenn man zwischen verschiedenen Folgeaktivitäten/-aktionen entscheiden muss.</td>
+        </tr>
+        <tr>
+            <td class="mitte"><img src="aktivitaetsdiagramm_verbindung.png" height=""></td>
+            <td class="mitte">Verbindung</td>
+            <td>Wenn zwei Aktionen erfüllt sein müssen, damit es weitergeht.</td>
+        </tr>
+        <tr>
+            <td class="mitte"><img src="aktivitaetsdiagramm_verzweigung.png" height=""></td>
+            <td class="mitte">Verzweigung</td>
+            <td>Wenn nachfolgend zwei verschiedene Aktionen ausgeführt werden.</td>
+        </tr>
+        <tr>
+            <td class="mitte"><img src="aktivitaetsdiagramm_abbruch.png" height=""></td>
+            <td class="mitte">Abbruch</td>
+            <td>Aktion wird abgebrochen</td>
+        </tr>       
     </table>
 
     <h3>Beispiel:</h3>
-    <img src="">
+    <img src="aktivitaetsdiagramm_beispiel.png">
+
+    <style>
+        table{
+            width: 600px;
+        }
+    </style>
 
 </body>
 </html>
