--- a/uml/klassendiagramm.html
+++ b/uml/klassendiagramm.html
@@ -10,45 +10,34 @@
 <body>
 
     <h2>Klassendiagramm</h2>
-    <p class="text"></p>
+    <p class="text">Klassendiagramme werden zum Beispiel häufig von Software-Ingenieuren genutzt, um die Software-Architektur zu dokumentieren. Es handelt sich um eine Art Strukturdiagramm, denn es beschreibt, was das modellierte System enthalten muss.</p>
+    <p class="text">Die Klassenform an sich besteht aus einem Rechteck mit drei Reihen. Die oberste Reihe enthält den Namen der Klasse, die mittlere Reihe gibt ihre Attribute an, und die unterste Reihe gibt Aufschluss über die Methoden oder Abläufe innerhalb der Klasse. Klassen und Unterklassen werden gruppiert, um die statische Beziehung zwischen den einzelnen Objekten zu verdeutlichen.</p>
+
     <table>
-        <tr>
-            <th>Bild</th>
-            <th>Name</th>
-            <th>Erklärung</th>
-        </tr>
+
         <tr>
             <td><img src="klassendiagramm_klasse.png" height=""></td>
-            <td>Klasse</td>
             <td>
-                Attribute
-                <ul>
-                    <li>private: -</li>
-                    <li>protected: #</li>
-                    <li>public: +</li>
-                    <li>package: ~</li>
-                </ul>
+                <b>Attribute</b><br>
+                <code>
+                    - = private<br>
+                    # = protected<br>
+                    + = public<br>
+                    ~ = package
+                </code>
             </td>
         </tr>
+    <!--
         <tr>
             <td><img src="" height=""></td>
             <td></td>
             <td></td>
         </tr>
-        <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
-        </tr>        
+    --> 
     </table>
 
     <h3>Beispiel:</h3>
-    <img src="">
+    <a href="https://www.lucidchart.com/pages/de/uml-klassendiagramme" target="_blank"><img src="klassendiagramm_beispiel.png" width="400px"></a>
 
 </body>
 </html>
