--- a/uml/pap.html
+++ b/uml/pap.html
@@ -18,23 +18,23 @@
             <th>Erklärung</th>
         </tr>
         <tr>
-            <td><img src="pap_terminator.png" height=""></td>
-            <td>Terminator</td>
+            <td class="mitte"><img src="pap_terminator.png" height=""></td>
+            <td class="mitte">Terminator</td>
             <td>Start- oder Endpunkt</td>
         </tr>
         <tr>
-            <td><img src="pap_verbindung.png" height=""></td>
-            <td>Verbindung</td>
+            <td class="mitte"><img src="pap_verbindung.png" height=""></td>
+            <td class="mitte">Verbindung</td>
             <td>Die Verbindung zwischen den einzelnen Elementen</td>
         </tr>
         <tr>
-            <td><img src="pap_anweisung.png" height=""></td>
-            <td>Anweisung</td>
+            <td class="mitte"><img src="pap_anweisung.png" height=""></td>
+            <td class="mitte">Anweisung</td>
             <td>Was soll passieren?</td>
         </tr>
         <tr>
-            <td><img src="pap_verzweigung.png" height=""></td>
-            <td>Verzweigung</td>
+            <td class="mitte"><img src="pap_verzweigung.png" height=""></td>
+            <td class="mitte">Verzweigung</td>
             <td>Wenn eine Entscheidung getroffen werden muss.</td>
         </tr>        
     </table>
