--- a/uml/sequenzdiagramm.html
+++ b/uml/sequenzdiagramm.html
@@ -9,8 +9,11 @@
 </head>
 <body>
 
-    <h2>Sequenzdiagramm</h2>
-    <p class="text"></p>
+    <h1><a href="https://www.lucidchart.com/pages/de/uml-sequenzdiagramme" target="_blank">Sequenzdiagramm</a></h1>
+    <p class="text">Ein Sequenzdiagramm ist eine Art von Interaktionsdiagramm in der Unified Modeling Language (kurz: UML) und bildet die Interaktion zwischen einer Gruppe von Objekten sowie die Reihenfolge ab.</p>
+    <p class="text">Software-Entwickler und Unternehmen greifen auf diese Diagramme zurück, um zu verstehen, welche Anforderungen ein neues System stellt oder um bereits bestehende Prozesse grafisch festzuhalten. Ein Sequenzdiagramm kann auch als Ereignisdiagramm oder Ereignisszenario bezeichnet werden.</p>
+    <p class="text">Um den Aufbau von Sequenzdiagrammen zu verstehen, muss man zunächst mehr über die Aufgabe der Unified Modeling Language (UML) wissen. UML ist ein Modellierungs-Toolkit, das die Erstellung und Notation verschiedener Diagrammarten, wie zum Beispiel Verhaltens-, Interaktions- und Strukturdiagrammen, regelt.
+    </p>
     <table>
         <tr>
             <th>Bild</th>
@@ -18,29 +21,83 @@
             <th>Erklärung</th>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
+            <td class="mitte"><img src="sequenzdiagramm_akteur.png" height=""></td>
+            <td class="mitte">Akteur (mit Klasse)</td>
+            <td>menschlicher Anwender</td>
+        </tr>
+        <tr>
+            <td class="mitte"><img src="sequenzdiagramm_lebenslinie.png" height=""></td>
+            <td class="mitte">Lebenslinie</td>
+            <td>läuft solange, wie der Akteur/das Objekt teilnimmt</td>
+        </tr>
+        <tr>
+            <td class="mitte"><img src="sequenzdiagramm_zeitachse.png" height=""></td>
+            <td class="mitte">Zeitachse</td>
             <td></td>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
+            <td class="mitte"><img src="sequenzdiagramm_teilnehmer_objekt.png" height=""></td>
+            <td class="mitte">Teilnehmer / Objekt<br>(mit Klasse)</td>
+            <td>(Unter-) Programme die am Geschehen teilhaben</td>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
-        </tr>
+            <td class="mitte"><img src="sequenzdiagramm_aktive_zeit.png" height=""></td>
+            <td class="mitte">aktive Zeit</td>
+            <td>Zeitraum, in der der Teilnehmer aktiv ist (warten ist auch eine Aktivität)</td>
+        </tr> 
+        <!--
         <tr>
-            <td><img src="" height=""></td>
+            <td class="mitte"><img src="" height=""></td>
+            <td class="mitte"></td>
             <td></td>
+        </tr> 
+        <tr>
+            <td class="mitte"><img src="" height=""></td>
+            <td class="mitte"></td>
+            <td></td>
+        </tr> 
+        <tr>
+            <td class="mitte"><img src="" height=""></td>
+            <td class="mitte" class="mitte"></td>
+            <td></td>
+        </tr> 
+        <tr>
+            <td class="mitte"><img src="" height=""></td>
+            <td class="mitte"></td>
+            <td></td>
+        </tr> 
+        <tr>
+            <td class="mitte"><img src="" height=""></td>
+            <td class="mitte"></td>
+            <td></td>
+        </tr> 
+        <tr>
+            <td class="mitte"><img src="" height=""></td>
+            <td class="mitte"></td>
+            <td></td>
+        </tr> 
+        <tr>
+            <td class="mitte"><img src="" height=""></td>
+            <td class="mitte"></td>
+            <td></td>
+        </tr> 
+        <tr>
+            <td class="mitte"><img src="" height=""></td>
+            <td class="mitte"></td>
             <td></td>
         </tr>        
+        -->
     </table>
 
-    <h3>Beispiel:</h3>
-    <img src="">
+    <h3>Beispiel 1:</h3>
+    <img src="sequenzdiagramm_beispiel1.png">
+
+    <h3>Beispiel 2:</h3>
+    <img src="sequenzdiagramm_beispiel2.png">
+
+    <style>
+
+    </style>
 
 </body>
 </html>
