--- a/uml/struktogramm.html
+++ b/uml/struktogramm.html
@@ -18,23 +18,23 @@
             <th>Erklärung</th>
         </tr>
         <tr>
-            <td><img src="struktogramm_terminator.png" height=""></td>
-            <td>Terminator</td>
+            <td class="mitte"><img src="struktogramm_terminator.png" height=""></td>
+            <td class="mitte">Terminator</td>
             <td>Start- oder Endpunkt</td>
         </tr>
         <tr>
-            <td><img src="struktogramm_anweisung.png" height=""></td>
-            <td>Anweisung</td>
+            <td class="mitte"><img src="struktogramm_anweisung.png" height=""></td>
+            <td class="mitte">Anweisung</td>
             <td>Was soll passieren?</td>
         </tr>
         <tr>
-            <td><img src="struktogramm_verzweigung.png" height=""></td>
-            <td>Verwzeigung</td>
+            <td class="mitte"><img src="struktogramm_verzweigung.png" height=""></td>
+            <td class="mitte">Verwzeigung</td>
             <td>Wenn eine Entscheidung getroffen wird</td>
         </tr>
         <tr>
-            <td><img src="struktogramm_schleife.png" height=""></td>
-            <td>Schleife</td>
+            <td class="mitte"><img src="struktogramm_schleife.png" height=""></td>
+            <td class="mitte">Schleife</td>
             <td>Wenn etwas (mehrfach) wiederholt werden soll</td>
         </tr>        
     </table>
