--- a/uml/use-case.html
+++ b/uml/use-case.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <h2>Use-Case-Diagramm</h2>
-    <p class="text"></p>
+    <h1><a href="https://www.lucidchart.com/pages/de/uml-anwendungsfalldiagramm" target="_blank">Use-Case-Diagramm</a><h3>(Anwendungsfalldiagramm)</h3></h1>
+    <p class="text">Ein UML-Use Case Diagramm (Anwendungsfalldiagramm) dient zur Veranschaulichungen der unterschiedlichen Interaktionsmöglichkeiten zwischen einem Benutzer und einem System. Unser Tool für UML-Diagramme unterstützt die Erstellung von Diagrammen in Profi-Qualität für praktisch jeden Anwendungsfall.</p>
     <table>
         <tr>
             <th>Bild</th>
@@ -18,29 +18,44 @@
             <th>Erklärung</th>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
+            <td class="mitte"><img src="use-case_anwender.png" height=""></td>
+            <td class="mitte">Akteur</td>
+            <td>Personen die etwas tun</td>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
+            <td class="mitte"><img src="use-case_vererbung.png" height=""></td>
+            <td class="mitte">Vererbung</td>
+            <td>Der Pfeil zeigt immer von der Person die erbt, auf die Person, von der geerbt wird!</td>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
+            <td class="mitte"><img src="use-case_line.png" height=""></td>
+            <td class="mitte">Handlung</td>
+            <td>Verbindet eine Person und eine Aktion</td>
         </tr>
         <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
-        </tr>        
+            <td class="mitte"><img src="use-case_aktion.png" height=""></td>
+            <td class="mitte">Assoziation</td>
+            <td>Ein Anwendungsfall / Eine Aktion</td>
+        </tr>
+        <tr>
+            <td class="mitte"><img src="use-case_extends.png" height=""></td>
+            <td class="mitte">Extends</td>
+            <td>Erweitert einen Anwendungsfall</td>
+        </tr>
+        <tr>
+            <td class="mitte"><img src="use-case_includes.png" height=""></td>
+            <td class="mitte">Includes</td>
+            <td>Import: Das Verhalten des Anwendungsfalls schließt das Verhalten des importierten Anwendungsfalls <b>zwingend</b> mit ein.</td>
+        </tr>       
     </table>
 
     <h3>Beispiel:</h3>
-    <img src="">
+    <img src="use-case_beispiel.png">
 
+    <style>
+        table{
+            width: 600px;
+        }
+    </style>
 </body>
 </html>
