--- a/uml/zustandsdiagramm.html
+++ b/uml/zustandsdiagramm.html
@@ -9,38 +9,14 @@
 </head>
 <body>
 
-    <h2>Zustandsdiagramm</h2>
-    <p class="text"></p>
-    <table>
-        <tr>
-            <th>Bild</th>
-            <th>Name</th>
-            <th>Erklärung</th>
-        </tr>
-        <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><img src="" height=""></td>
-            <td></td>
-            <td></td>
-        </tr>        
-    </table>
+    <h1><a href="https://www.lucidchart.com/pages/de/maschinenzustandsdiagramm" target="_blank">Zustandsdiagramm</a></h1>
+    <p>Ähnlich wie das <a href="aktivitaetsdiagramm.html">Aktivitätsdiagramm</a></p>
+    <p class="text">Als Zustandsautomat wird ein Gerät bezeichnet, das den Status eines Objekts zu einem bestimmten Zeitpunkt aufzeichnet und auf der Basis der jeweils empfangenen Eingaben Statusänderungen bzw. weitere Aktionen auslösen kann. Der Begriff „Zustand“ bezieht sich dabei nicht auf das Verhalten des betreffenden Objekts, sondern auf die unterschiedlichen Kombinationen der darin enthaltenen Informationen. Zum besseren Verständnis der unterschiedlichen Zustände kann es nützlich sein, sämtliche möglichen Zustände abzubilden und zu veranschaulichen, wie sie jeweils erreicht werden.</p>
+    <p class="text">In Zustandsdiagrammen werden vor allem Zustände und Übergänge abgebildet. Zustände werden durch Rechtecke mit abgerundeten Ecken dargestellt, die mit dem Namen des Zustands beschriftet werden. Übergänge werden mit Pfeilen, die von einem Zustand zu einem anderen verlaufen, gekennzeichnet und geben die Zustandsveränderung an. </p>
 
     <h3>Beispiel:</h3>
-    <img src="">
+    <p><small>Link geht zu einer externen Seite</small></p>
+    <a href="https://www.lucidchart.com/pages/de/maschinenzustandsdiagramm" target="_blank"><img src="zustandsdiagramm_AirportCheckInExample.png" width="400px"></a>
 
 </body>
 </html>
