--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
         <p class="mitte">Wenn Überschriften Links sind, führen sie zu der Seite, von der ich die Infos habe.</p>
     </div>
 
-    <div class="inhalt">
-
-        <div class="abschnitt">
-            <h3>Design-Pattern</h3>
-            <hr>
-            <p><a href="./design-pattern/mvc-pattern/">Model-View-Controller</a></p>
-            <p>Singleton</p>
-            <p>Observer</p>
-            <p>Factory</p>
-        </div>
+    <div class="inhalt">        
 
         <div class="abschnitt">
             <h3>SQL <small>(MySQL/MariaDB)</small></h3>
@@ -60,6 +51,16 @@
         </div>
 
         <div class="abschnitt">
+            <h3>Design-Pattern</h3>
+            <hr>
+            <p><a href="./design-pattern/mvc-pattern/">Model-View-Controller</a></p>
+            <p>Singleton</p>
+            <p><a href="./design-pattern/observer-pattern/">Observer</a></p>
+            <p>Factory</p>
+            <p><a href="./programmieren/interface.html">Interface</a></p>
+        </div>
+
+        <div class="abschnitt">
             <h3><a href="https://dev.to/koladev/8-must-know-sorting-algorithms-5ja" target="_blank">Algorithmen</a></h3>
             <hr>
             <p><a href="./algorithmen/bubble-sort.html">Bubble-Sort</a></p>
@@ -77,22 +78,13 @@
         <div class="abschnitt">
             <h3>Programmierung</h3>
             <hr>
-            <p>Grundlagen</p>
-            <p>Rekursion</p>
-            <p>Objektorientierung</p>
-            <p>Interface</p>
-            <p>abstrakte Klassen</p>
-            <p>generische Klassen</p>            
-        </div>
-
-        <div class="abschnitt">
-            <h3>Netzwerke</h3>
-            <hr>
-            <p><a href="./netzwerke/grundlagen.html">Grundlagen</a></p>
-            <p>IPv4</p>
-            <p>IPv6</p>
-            <p>Subnetting</p>
-            <p>Protokolle</p>
+            <p><a href="./programmieren/grundlagen.html">Grundlagen</a></p>
+            <p><a href="./programmieren/rekursion.html">Rekursion</a></p>
+            <p><a href="./programmieren/objektorientierung.html">Objektorientierung</a></p>
+            <p><a href="./programmieren/interface.html">Interface</a></p>
+            <p><a href="./programmieren/abstrakte_klassen.html">abstrakte Klassen</a></p>
+            <p>abstrakte Klasse vs Interface</p>
+            <p><a href="./programmieren/generische_klassen.html">generische Klassen</a></p>
         </div>
 
         <div class="abschnitt">
@@ -107,6 +99,16 @@
         </div>
 
         <div class="abschnitt">
+            <h3>Netzwerke</h3>
+            <hr>
+            <p><a href="./netzwerke/grundlagen.html">Grundlagen</a></p>
+            <p><a href="./netzwerke/ipv4.html">IPv4</a></p>
+            <p>IPv6</p>
+            <p><a href="./netzwerke/subnetting.html">Subnetting</a></p>
+            <p>Protokolle</p>
+        </div>        
+
+        <div class="abschnitt">
             <h3><a href="https://fachinformatikerpruefungsvorbereitung.de/abschlusspr%C3%BCfungteil2wirtschaft/" target="_blank">WISO</a></h3>
             <hr>
             <p><a href="./wiso/epk.html">EPK - Ereignisgesteuerte Prozesskette</a></p>
@@ -119,13 +121,14 @@
             <p><a href="./wiso/wirtschaftssektoren.html">Wirtschaftssektoren</a></p>
         </div>
 
-        <!--
+        
         <div class="abschnitt">
             <h3>Sonstiges</h3>
             <hr>
-            <p>...</p>
+            <p><a href="./linux/">Linux-Basics</a></p>
+            <p>Git</p>
         </div>
-        -->
+        
 
     </div>
 
